[gd_scene format=3 uid="uid://ch2kmbeayc3df"]

[ext_resource type="Script" uid="uid://cksl68l1onqra" path="res://Client/ui/Login.gd" id="1_leum0"]

[node name="Login" type="Control" unique_id=1391658166]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leum0")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1784001404]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1420200539]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Username_input" type="LineEdit" parent="CenterContainer/VBoxContainer" unique_id=298740430]
layout_mode = 2
placeholder_text = "Identifant"

[node name="Pin_input" type="LineEdit" parent="CenterContainer/VBoxContainer" unique_id=6927831]
layout_mode = 2
placeholder_text = "PIN"
max_length = 4
secret = true

[node name="Login_button" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1658283452]
layout_mode = 2
text = "Connexion"

[node name="Background" type="ColorRect" parent="." unique_id=1949501948]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.13333334, 0.5254902, 0.5764706, 1)

[connection signal="text_submitted" from="CenterContainer/VBoxContainer/Username_input" to="." method="_on_username_input_text_submitted"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/Pin_input" to="." method="_on_pin_input_text_submitted"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Login_button" to="." method="_on_login_button_pressed"]
